<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_pubsub_py</name>
  <version>0.0.1</version>
  <description>Minimal (Hello) ROS2 publisher and subscriber py nodes</description>
  <maintainer email="selinis.g@gmail.com">Ioannis Selinis</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
